--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@next/font": "13.1.1",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.1",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
@@ -27,9 +30,13 @@
     "@graphql-codegen/typescript-operations": "^2.5.12",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
+    "@hookform/resolvers": "^2.9.10",
     "autoprefixer": "^10.4.13",
+    "next-auth-client": "^1.5.0",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "react-hook-form": "^7.41.5",
+    "tailwindcss": "^3.2.4",
+    "zod": "^3.20.2"
   }
 }
